<package format="3">
  <name>load_cell_2025</name>
  <version>0.1.0</version>
  <description>Load cell visualization and calibration GUI</description>

  <maintainer email="dldnjswns7412@gmail.com">WJ</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>humanoid_interfaces</build_depend>
  <build_depend>Boost</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>humanoid_interfaces</exec_depend>
  <exec_depend>Boost</exec_depend>
  <exec_depend>qt5-qmake</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>libqt5serialport5-dev</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

